--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "wheel"{%- if cookiecutter.use_pytest == 'y' %}, "pytest-runner"{%- endif %}]
 build-backend = "setuptools.build_meta"
