--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -58,7 +58,7 @@ tests_require = pytest>=3
 # rest = docutils>=0.3; pack ==1.1, ==1.3
 
 [options.packages.find]
-exclude =
+include =
     {{ cookiecutter.project_slug }}
     {{ cookiecutter.project_slug }}.*
 
